[package]
name = "ola"
version = "0.1.0"
authors = ["Jared Beller <jbellerb@vt.edu>"]
categories = ["api-bindings"]
description = "Unofficial Rust client for the Open Lighting Architecture"
documentation = "https://docs.rs/ola"
edition = "2021"
include = [
    "build.rs",
    "/src/**/*.rs",
    "/ola/common/protocol/Ola.proto",
    "ola/common/rpc/Rpc.proto",
    "README.md",
    "LICENSE",
]
keywords = ["dmx", "lighting"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/jbellerb/libola-rs"

[dependencies]
bytes = "1"
prost = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "net", "time"], optional = true }

[features]
tokio = ["dep:tokio"]

[build-dependencies]
proc-macro2 = "1"
prost-build = "0.11"
quote = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
